--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-<!-- Gitment -->
+<!-- Gitment
 <div id="container"></div>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
@@ -13,4 +13,4 @@ var gitment = new Gitment({
   },
 })
 gitment.render('container')
-</script>
+</script> -->
