--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
   <!-- My CSS -->
   <link rel="stylesheet" href="/assets/main.css">
 
-  <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+  <link rel="shortcut icon" href="/favicon.ico">
 
   <!-- MathJax -->
   <script type="text/x-mathjax-config">
